@@ -3,6 +3,7 @@
 	* internal.m: Define WindowsArguments as Arguments during load of
 	tkWinInt.h.  Define BOOL as BOOL_ during load of tkInt.h.
 	Do these includes before Swarm class includes.
+	(XDrawPoint, XCreatePixmap, XFreePixmap): New functions for __WIN32_.
 
 	* internal.h: Don't include X11/xpm.h if __WIN32__.
 	gnu-win32 B19 supplies X11 header files.  
